--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>Rédactions ou interventions</h2>
     <ul>
 
-<li>01/04/2014 - <a href="https://www.youtube.com/watch?v=Y4dska05A50">Présentation sur le phantasme du jeu sans fin (programmation et littérature). Aux Take Off Talks</a></li>
+<li>01/04/2014 - <a href="https://www.youtube.com/watch?v=Y4dska05A50">Présentation sur le phantasme du jeu sans fin</a> (programmation et littérature). Aux Take Off Talks [<a href="https://github.com/nukiFW/Presentations/blob/master/TakeOffTalk-Printemps2014/slides.pdf?raw=true">PDF</a>]</li>
 
     </ul>
   </body>
