Modification de la liste

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
     <li>
       01/04/2014 - <a href="https://www.youtube.com/watch?v=Y4dska05A50">Présentation sur le phantasme du jeu sans fin</a><br />
-      (programmation et littérature). Aux Take Off Talks [<a href="https://github.com/nukiFW/Presentations/blob/master/TakeOffTalk-Printemps2014/slides.pdf?raw=true">PDF</a>]
+     Présentation aux <i>Take Off talk</i> d'Avril 2014 sur l'usage de la littérature (formalisme, structuralisme et sémiotique) pour générer une substance narrative potentiellement infinie.<br />
+ [<a href="https://github.com/nukiFW/Presentations/blob/master/TakeOffTalk-Printemps2014/slides.pdf?raw=true">PDF</a>]
      </li>
 
     </ul>
