Ajout d'un lien Youtube

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <li>
       01/04/2014 - <a href="https://www.youtube.com/watch?v=Y4dska05A50">Présentation sur le phantasme du jeu sans fin</a><br />
      Présentation aux <i>Take Off talk</i> d'Avril 2014 sur l'usage de la littérature (formalisme, structuralisme et sémiotique) pour générer une substance narrative potentiellement infinie.<br />
- [<a href="https://github.com/nukiFW/Presentations/blob/master/TakeOffTalk-Printemps2014/slides.pdf?raw=true">PDF</a>]
+ [<a href="https://github.com/nukiFW/Presentations/blob/master/TakeOffTalk-Printemps2014/slides.pdf?raw=true">PDF</a>, <a href="https://www.youtube.com/watch?v=Y4dska05A50">Youtube</a>]
      </li>
 
     </ul>
