--- a/index.html
+++ b/index.html
@@ -3,28 +3,31 @@
   <head>
     <title>Xavier Van de Woestyne</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Xavier Van de Woestyne</h1>
-    <hr />
-    <h2>Me contacter</h2>
-    <ul>
-      <li><a href="mailto:xaviervdw_NOSPAM@gmail.com">Par courriel</a></li>
-      <li>Par téléphone en Belgique : +32 474 49 53 83</li>
-      <li>Par téléphone en France : +33 6 73 38 72 84</li>
-      <li><a href="https://github.com/nukiFW">Via Github</a> | 
-	<a href="https://twitter.com/nukiFW">Via Twitter</a></li>
-    </ul>
+    <div id="content">
+      <h1>Xavier Van de Woestyne</h1>
+      <hr />
+      <h2>Me contacter</h2>
+      <ul>
+	<li><a href="mailto:xaviervdw_NOSPAM@gmail.com">Par courriel</a></li>
+	<li>Par téléphone en Belgique : +32 474 49 53 83</li>
+	<li>Par téléphone en France : +33 6 73 38 72 84</li>
+	<li><a href="https://github.com/nukiFW">Via Github</a> | 
+	  <a href="https://twitter.com/nukiFW">Via Twitter</a></li>
+      </ul>
 
-    <h2>Rédactions ou interventions</h2>
-    <ul>
+      <h2>Rédactions ou interventions</h2>
+      <ul>
 
-    <li>
-      01/04/2014 - <a href="https://www.youtube.com/watch?v=Y4dska05A50">Présentation sur le phantasme du jeu sans fin</a><br />
-     Présentation aux <i>Take Off talk</i> d'Avril 2014 sur l'usage de la littérature (formalisme, structuralisme et sémiotique) pour générer une substance narrative potentiellement infinie.<br />
- [<a href="https://github.com/nukiFW/Presentations/blob/master/TakeOffTalk-Printemps2014/slides.pdf?raw=true">PDF</a>, <a href="https://www.youtube.com/watch?v=Y4dska05A50">Youtube</a>]
-     </li>
+	<li>
+	  01/04/2014 - <a href="https://www.youtube.com/watch?v=Y4dska05A50">Présentation sur le phantasme du jeu sans fin</a><br />
+	  Présentation aux <i>Take Off talk</i> d'Avril 2014 sur l'usage de la littérature (formalisme, structuralisme et sémiotique) pour générer une substance narrative potentiellement infinie.<br />
+	  [<a href="https://github.com/nukiFW/Presentations/blob/master/TakeOffTalk-Printemps2014/slides.pdf?raw=true">PDF</a>, <a href="https://www.youtube.com/watch?v=Y4dska05A50">Youtube</a>]
+	</li>
 
-    </ul>
+      </ul>
+    </div>
   </body>
 </html>
