--- a/src/header.html
+++ b/src/header.html
@@ -3,10 +3,12 @@
   <head>
     <title>{{TITLE}}</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../default.css">
     <script src="../highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
   </head>
   <body>
-    <a href="../index.html">Retourner a l'index</a>
-    <hr id="top" name="top"/>
+    <div id="content">
+      <a href="../index.html">Retourner a l'index</a>
+      <hr id="top" name="top"/>
