--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
       </ul>
 
       <h2>Rédactions ou interventions</h2>
-      <ul>
+      <ul id="listarticle">
 
 	<li>
-	  01/04/2014 - <a href="https://www.youtube.com/watch?v=Y4dska05A50">Présentation sur le phantasme du jeu sans fin</a><br />
+	  01/12/2014 - <strong>Les types fantômes en OCaml</strong><br />
+	  Brève présentation des types fantômes avec le langage OCaml.<br />
+	  [<a href="post/phantoms.html">HTML</a>, <a href="pdf/phantoms.md.pdf">PDF</a>]
+	</li>
+
+	<li>
+	  01/04/2014 - <strong>Présentation sur le phantasme du jeu sans fin</strong><br />
 	  Présentation aux <i>Take Off talk</i> d'Avril 2014 sur l'usage de la littérature (formalisme, structuralisme et sémiotique) pour générer une substance narrative potentiellement infinie.<br />
 	  [<a href="https://github.com/nukiFW/Presentations/blob/master/TakeOffTalk-Printemps2014/slides.pdf?raw=true">PDF</a>, <a href="https://www.youtube.com/watch?v=Y4dska05A50">Youtube</a>]
 	</li>
