--- a/src/header.html
+++ b/src/header.html
@@ -12,3 +12,4 @@
     <div id="content">
       <a href="../index.html">Retourner a l'index</a>
       <hr id="top" name="top"/>
+      <div id="innercontent">
