--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	  01/12/2014 - <strong>Les types fantômes en OCaml</strong><br />
 	  Brève présentation des types fantômes avec le langage OCaml, une manière d'ajouter 
 	  des informations d'usages aux types.<br />
-	  [<a href="post/phantoms.html">HTML</a>, <a href="pdf/phantoms.md.pdf">PDF</a>]
+	  [<a href="post/phantoms.html">HTML</a>, <a href="pdf/phantoms.pdf">PDF</a>]
 	</li>
 
 	<li>
