--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
       <ul id="listarticle">
 
 	<li>
+	  22/12/2014 - <strong>Un environnement de test réfutable pour OCaml</strong><br />
+	  Utilisation des annotations PPX pour OCaml 4.02, en vue de produire un environnement de test "inline", et substituable.
+	  <br />
+	  [<a href="post/ppx_test.html">HTML</a>, <a href="pdf/ppx_test.pdf">PDF</a>, <a href="https://github.com/nukiFW/ppx_test">Github</a>]
+	</li>
+
+	
+	<li>
 	  01/12/2014 - <strong>Les types fantômes en OCaml</strong><br />
 	  Brève présentation des types fantômes avec le langage OCaml, une manière d'ajouter 
 	  des informations d'usages aux types.<br />
