--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
       <h2>Rédactions ou interventions</h2>
       <ul id="listarticle">
 
+	<!-- <li> -->
+	<!--   24/12/2014 - <strong>Introduction naïve au développement d'application web avec Ocsigen</strong><br /> -->
+	<!--   Apprentissage étape par étape de la construction d'une application web avec le framework Ocsigen (OCaml) pour créer des applications sûres et bien typées. -->
+	<!--   <br /> -->
+	<!--   [<a href="post/ocsigen.html">HTML</a>, <a href="pdf/ocsigen.pdf">PDF</a>] -->
+	<!-- </li> -->
+
+	
 	<li>
 	  22/12/2014 - <strong>Un environnement de test réfutable pour OCaml</strong><br />
 	  Utilisation des annotations PPX pour OCaml 4.02, en vue de produire un environnement de test "inline", et substituable.
@@ -43,6 +51,7 @@
 	</li>
 
       </ul>
+      <strong>Infos: </strong>Les articles sont générés grâce à <a href="http://johnmacfarlane.net/pandoc/">Pandoc</a>. Et le code source de cette page web est disponnible <a href="https://github.com/nukiFW/nukiFW.github.io">ici</a>.
     </div>
   </body>
 </html>
