--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Xavier Van de Woestyne</title>
     <meta charset="utf-8">
+    <link href='http://fonts.googleapis.com/css?family=Domine' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
