--- a/src/header.html
+++ b/src/header.html
@@ -3,6 +3,7 @@
   <head>
     <title>{{TITLE}}</title>
     <meta charset="utf-8">
+    <link href='http://fonts.googleapis.com/css?family=Domine' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../default.css">
     <script src="../highlight.pack.js"></script>
