--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<li><a href="mailto:xaviervdw_NOSPAM@gmail.com">Par courriel</a></li>
 	<li>Par téléphone en Belgique : +32 474 49 53 83</li>
 	<li>Par téléphone en France : +33 6 73 38 72 84</li>
-	<li><a href="https://github.com/nukiFW">Via Github</a> | 
+	<li><a href="https://github.com/xvw">Via Github</a> | 
 	  <a href="https://twitter.com/nukiFW">Via Twitter</a></li>
       </ul>
 
@@ -34,7 +34,7 @@
 	  22/12/2014 - <strong>Un environnement de test réfutable pour OCaml</strong><br />
 	  Utilisation des annotations PPX pour OCaml 4.02, en vue de produire un environnement de test "inline", et substituable.
 	  <br />
-	  [<a href="post/ppx_test.html">HTML</a>, <a href="pdf/ppx_test.pdf">PDF</a>, <a href="https://github.com/nukiFW/ppx_test">Github</a>]
+	  [<a href="post/ppx_test.html">HTML</a>, <a href="pdf/ppx_test.pdf">PDF</a>, <a href="https://github.com/xvw/ppx_test">Github</a>]
 	</li>
 
 	
@@ -48,7 +48,7 @@
 	<li>
 	  01/04/2014 - <strong>Présentation sur le phantasme du jeu sans fin</strong><br />
 	  Présentation aux <i>Take Off talk</i> d'Avril 2014 sur l'usage de la littérature (formalisme, structuralisme et sémiotique) pour générer une substance narrative potentiellement infinie.<br />
-	  [<a href="https://github.com/nukiFW/Presentations/blob/master/TakeOffTalk-Printemps2014/slides.pdf?raw=true">PDF</a>, <a href="https://www.youtube.com/watch?v=Y4dska05A50">Youtube</a>]
+	  [<a href="https://github.com/xvw/Presentations/blob/master/TakeOffTalk-Printemps2014/slides.pdf?raw=true">PDF</a>, <a href="https://www.youtube.com/watch?v=Y4dska05A50">Youtube</a>]
 	</li>
 
       </ul>
