--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 	<!--   [<a href="post/ocsigen.html">HTML</a>, <a href="pdf/ocsigen.pdf">PDF</a>] -->
 	<!-- </li> -->
 
+		
+	<li>
+	  26/01/2015 - <strong>Sur la construction d'un programme utile</strong><br />
+	  Cet article est assez spécial car il parlera de moi. Il mérite le label "life style" et se veut témoin d'un état assez fun que j'ai pu expérimenter récemment, en concevant un programme me rendant réellement service. L'article est donc volontairement court.
+	  <br />
+	  [<a href="post/code_utile.html">HTML</a>, <a href="pdf/code_utile.pdf">PDF</a>]
+	</li>
+
 	
 	<li>
 	  22/12/2014 - <strong>Un environnement de test réfutable pour OCaml</strong><br />
