--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	</li>
 
       </ul>
-      <strong>Infos: </strong>Les articles sont générés grâce à <a href="http://johnmacfarlane.net/pandoc/">Pandoc</a>. Et le code source de cette page web est disponible <a href="https://github.com/nukiFW/nukiFW.github.io">ici</a>.
+      <strong>Infos: </strong>Les articles sont générés grâce à <a href="http://johnmacfarlane.net/pandoc/">Pandoc</a>. Et le code source de cette page web est disponible <a href="https://github.com/xvw/xvw.github.io">ici</a>.
     </div>
   </body>
 </html>
