--- a/src/header.html
+++ b/src/header.html
@@ -10,7 +10,10 @@
     <script>hljs.initHighlightingOnLoad();</script>
   </head>
   <body>
+		<div id="htitle">
+			<h1>{{TITLE}}</h1>
+			<div id="rtitle">
+			</div>
+		</div>
     <div id="content">
-      <a href="../index.html">Retourner a l'index</a>
-      <hr id="top" name="top"/>
       <div id="innercontent">
