--- a/src/footer.html
+++ b/src/footer.html
@@ -3,7 +3,7 @@
 <a href="#top">Remonter</a> | <a href="../index.html">Retourner à l'index</a>
 <hr />
 <h2>Commentaires</h2>
-<div id="disqus_thread"></div>
+  <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'nukifw'; // required: replace example with your forum shortname
@@ -14,8 +14,8 @@
             dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
             (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    </div>
-    </body>
+    </script> <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </div>
+  <script src="../custom.js"></script>
+ </body>
 </html>
