--- a/src/header.html
+++ b/src/header.html
@@ -10,9 +10,11 @@
     <script>hljs.initHighlightingOnLoad();</script>
   </head>
   <body>
+		<div id="top">remonter</div>
 		<div id="htitle">
 			<h1>{{TITLE}}</h1>
 			<div id="rtitle">
+							<a href="../index.html">Retourner à l'index</a>
 			</div>
 		</div>
     <div id="content">
