--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+		<div id="htitle"><h1>Xavier Van de Woestyne</h1></div>
     <div id="content">
-      <h1>Xavier Van de Woestyne</h1>
 
       <h2>Me contacter</h2>
       <ul>
