--- a/src/header.html
+++ b/src/header.html
@@ -13,7 +13,7 @@
 		<div id="top">remonter</div>
 		<div id="htitle">
 			<h1>{{TITLE}}</h1>
-			<div id="rtitle">
+			<div id="nav">
 							<a href="../index.html">Retourner à l'index</a>
 			</div>
 		</div>
