--- a/src/footer.html
+++ b/src/footer.html
@@ -2,7 +2,7 @@
 <hr />
 <a href="#top">Remonter</a> | <a href="../index.html">Retourner à l'index</a>
 <hr />
-<h2>Commentaires</h2>
+<h2 id="commentaires">Commentaires</h2>
   <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
