--- a/index.html
+++ b/index.html
@@ -1,66 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Xavier Van de Woestyne</title>
-    <meta charset="utf-8">
-    <link href='http://fonts.googleapis.com/css?family=Domine' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-		<div id="htitle"><h1>Xavier Van de Woestyne</h1></div>
-    <div id="content">
-
-      <h2>Me contacter</h2>
-      <ul>
-	<li><a href="mailto:xaviervdw_NOSPAM@gmail.com">Par courriel</a></li>
-	<li>Par téléphone en Belgique : +32 474 49 53 83</li>
-	<li>Par téléphone en France : +33 6 73 38 72 84</li>
-	<li><a href="https://github.com/xvw">Via Github</a> | 
-	  <a href="https://twitter.com/nukiFW">Via Twitter</a></li>
-      </ul>
-
-      <h2>Rédactions ou interventions</h2>
-      <ul id="listarticle">
-
-	<!-- <li> -->
-	<!--   24/12/2014 - <strong>Introduction naïve au développement d'application web avec Ocsigen</strong><br /> -->
-	<!--   Apprentissage étape par étape de la construction d'une application web avec le framework Ocsigen (OCaml) pour créer des applications sûres et bien typées. -->
-	<!--   <br /> -->
-	<!--   [<a href="post/ocsigen.html">HTML</a>, <a href="pdf/ocsigen.pdf">PDF</a>] -->
-	<!-- </li> -->
-
-		
-	<li>
-	  26/01/2015 - <strong>Sur la construction d'un programme utile</strong><br />
-	  Cet article est assez spécial car il parlera de moi. Il mérite le label "life style" et se veut témoin d'un état assez fun que j'ai pu expérimenter récemment, en concevant un programme me rendant réellement service. L'article est donc volontairement court.
-	  <br />
-	  [<a href="post/code_utile.html">HTML</a>, <a href="pdf/code_utile.pdf">PDF</a>]
-	</li>
-
-	
-	<li>
-	  22/12/2014 - <strong>Un environnement de test réfutable pour OCaml</strong><br />
-	  Utilisation des annotations PPX pour OCaml 4.02, en vue de produire un environnement de test "inline", et substituable.
-	  <br />
-	  [<a href="post/ppx_test.html">HTML</a>, <a href="pdf/ppx_test.pdf">PDF</a>, <a href="https://github.com/xvw/ppx_test">Github</a>]
-	</li>
-
-	
-	<li>
-	  01/12/2014 - <strong>Les types fantômes en OCaml</strong><br />
-	  Brève présentation des types fantômes avec le langage OCaml, une manière d'ajouter 
-	  des informations d'usages aux types.<br />
-	  [<a href="post/phantoms.html">HTML</a>, <a href="pdf/phantoms.pdf">PDF</a>]
-	</li>
-
-	<li>
-	  01/04/2014 - <strong>Présentation sur le phantasme du jeu sans fin</strong><br />
-	  Présentation aux <i>Take Off talk</i> d'Avril 2014 sur l'usage de la littérature (formalisme, structuralisme et sémiotique) pour générer une substance narrative potentiellement infinie.<br />
-	  [<a href="https://github.com/xvw/Presentations/blob/master/TakeOffTalk-Printemps2014/slides.pdf?raw=true">PDF</a>, <a href="https://www.youtube.com/watch?v=Y4dska05A50">Youtube</a>]
-	</li>
-
-      </ul>
-      <strong>Infos: </strong>Les articles sont générés grâce à <a href="http://johnmacfarlane.net/pandoc/">Pandoc</a>. Et le code source de cette page web est disponible <a href="https://github.com/xvw/xvw.github.io">ici</a>.
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html><head><title>Xavier Van de Woestyne</title><link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700' rel='stylesheet' type='text/css'><link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'><link href='css/app.min.css' rel='stylesheet' type='text/css'><meta charset="utf-8"></head><body><div id="content"><div id="header"><h1>Xavier Van de Woestyne</h1><h2>J'aime beaucoup la programmation</h2></div><p> Bonjour. Je m'appelle Xavier Van de Woestyne. Etant très intéressé par la programmation, cette page servira à heberger les articles que je serai amené à rédiger. Actuellement employé dans la super agence <a href="http://derniercri.io" title="Cliquez pour voir son site !">DernierCri</a>, je m'intéresse à la programmation, principalement aux langages fonctionnels, statiquement typés, mais aussi à la littérature et la musique. </p><ul class="simple-enum"><li><a href="list.html#Bonne-Lecture!">Liste des rédactions ou interventions</a></li><li><a href="">A propos de cette page</a></li></ul><h3>Me contacter</h3><ul class="flat-enum"><li><span>Par courriel</span><a href="mailto:xaviervdw[AT]gmail[dot]com"> xav<span class="obfuscator">OBFU</span>ier@gmail.com </a></li><li><span>Via Github</span><a href="https://github.com/xvw"> xvw </a></li><li><span>Via Twitter</span><a href="https://twitter.com/nukifw"> @nukifw </a></li><li><span>Par téléphone</span><a href="tel:+32474495383"> +32474<span class="obfuscator">OBFU</span>495383 (BE) </a></li><li><span>Par téléphone</span><a href="tel:+33673387284"> +33673<span class="obfuscator">OBFU</span>387284 (FR) </a></li></ul></div><div id="header-line"></div></body></html>
