--- a/tpl/listarticles.html
+++ b/tpl/listarticles.html
@@ -11,7 +11,7 @@
 				<h1>Xavier Van de Woestyne</h1>
 				<h2>J'aime beaucoup la programmation</h2>
 			</div>
-			<div class="right headmenu">
+			<div class="center headmenu">
 				<a href="index.html#A-bientôt!" title="Vous avez réellement tout lu?">Retour à l'accueil</a>
 			</div>
 			<p>
