--- a/tpl/listarticles.html
+++ b/tpl/listarticles.html
@@ -19,7 +19,7 @@
 				chronologiquement. En espérant que vous y trouviez du contenu
 				intéressant, bonne lecture !
 			</p>
-			<h3>Interventions ou publication</h3>
+			<h3>Interventions ou publications</h3>
 			<div id="articles">
 				{{articles-enum}}
 			</div>
