--- a/tpl/index.html
+++ b/tpl/index.html
@@ -23,10 +23,10 @@
 
 			<ul class="simple-enum">
 				<li><a href="list.html#Bonne-Lecture!">Liste des rédactions ou interventions</a></li>
-				<li><a href="">A propos de cette page</a></li>
+				<li><a href="apropos.html#Oh-vous-voulez-en-savoir-plus?">A propos de cette page</a></li>
 			</ul>
 
-			<h3>Me contacter</h3>
+			<h3 class="section-title">Me contacter</h3>
 
 			<ul class="flat-enum">
 
