--- a/tpl/listarticles.html
+++ b/tpl/listarticles.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Xavier Van de Woestyne</title>
+    <title>Xavier Van de Woestyne - Interventions ou publications</title>
 		{{CSS}}
     <meta charset="utf-8">
   </head>
@@ -9,7 +9,7 @@
 		<div id="content">
 			<div id="header">
 				<h1>Xavier Van de Woestyne</h1>
-				<h2>J'aime beaucoup la programmation</h2>
+				<h2>Interventions ou publications</h2>
 			</div>
 			<div class="center headmenu">
 				<a href="index.html#A-bientôt!" title="Vous avez réellement tout lu?">Retour à l'accueil</a>
@@ -19,7 +19,6 @@
 				chronologiquement. En espérant que vous y trouviez du contenu
 				intéressant, bonne lecture !
 			</p>
-			<h3 class="section-title">Interventions ou publications</h3>
 			<div id="articles">
 				{{articles-enum}}
 			</div>
