--- a/tpl/apropos.html
+++ b/tpl/apropos.html
@@ -12,7 +12,7 @@
 				<h2>A propos de cette page</h2>
 			</div>
 			<div class="center headmenu">
-        <a href="index.html#A-bientôt!" title="Vous avez réellement tout lu?">
+        <a href="index.html#IL-FAUT-LIRE-LES-ARTICLES!!!" title="C'est une page rigolote :D">
           Retour à l'accueil
         </a>
 			</div>
