--- a/tpl/listarticles.html
+++ b/tpl/listarticles.html
@@ -19,6 +19,7 @@
 				chronologiquement. En espérant que vous y trouviez du contenu
 				intéressant, bonne lecture !
 			</p>
+      <a href="feed.xml">Flux RSS</a>
 			<div id="articles">
 				{{articles-enum}}
 			</div>
