--- a/tpl/listarticles.html
+++ b/tpl/listarticles.html
@@ -13,13 +13,13 @@
 			</div>
 			<div class="center headmenu">
 				<a href="index.html#A-bientôt!" title="Vous avez réellement tout lu?">Retour à l'accueil</a>
+        <a href="feed.xml" title="Yeeee, Abonnez-vous!">Flux RSS</a>
 			</div>
 			<p>
 				Voici la liste de mes interventions ou publications ordonnées
 				chronologiquement. En espérant que vous y trouviez du contenu
 				intéressant, bonne lecture !
 			</p>
-      <a href="feed.xml">Flux RSS</a>
 			<div id="articles">
 				{{articles-enum}}
 			</div>
