--- a/tpl/listarticles.html
+++ b/tpl/listarticles.html
@@ -20,10 +20,14 @@
 				chronologiquement. En espérant que vous y trouviez du contenu
 				intéressant, bonne lecture !
 			</p>
+      <div class="right">
+        <input type="text" id="search-bar" placeholder="find by keywords"/>
+      </div>
 			<div id="articles">
 				{{articles-enum}}
 			</div>
 		</div>
 		<div id="header-line"></div>
+    <script src="js/custom.js"></script>
 	</body>
 </html>
