--- a/tpl/article.html
+++ b/tpl/article.html
@@ -5,6 +5,7 @@
 		{{CSS}}
 		<link rel="stylesheet" href="../css/default.css">
     <meta charset="utf-8">
+    {{KEYWORDS}}
 		<script src="../js/highlight.pack.js"></script>
 		<script>hljs.initHighlightingOnLoad();</script>
   </head>
@@ -15,8 +16,8 @@
 				<h2>{{article-subtitle}}</h2>
 			</div>
 			<div class="center headmenu">
+        <a href="../list.html#Encore-une-lecture?" title="Bonne lecture?">Retour à la liste</a>
 				<a href="../index.html#Pourquoi-ne-pas-laisser-un-petit-commentaire?!" title="Il y a des commentaires en bas !!!">Retour à l'accueil</a>
-				 <a href="../list.html#Encore-une-lecture?" title="Bonne lecture?">Retour à la liste</a>
 			</div>
 			<div id="article-content">
 				{{article-content}}
