--- a/tpl/apropos.html
+++ b/tpl/apropos.html
@@ -40,7 +40,7 @@
         <a href="http://johnmacfarlane.net/pandoc/">Pandoc</a>, les différents
         générateurs sont implémentés avec l'excellent langage
         <a href="http://ocaml.org">OCaml</a> (que je recommande à toute
-        personne désireuse d'utiliser un langage moderne et agréable).
+        personne désireuse d'utiliser un langage moderne et agréable). Le Javascript est généré avec <a href="https://ocsigen.org/js_of_ocaml/">Js_of_ocaml</a>, une manière saine de faire du Javascript !
       </p>
 
       <ul class="flat-enum">
@@ -52,6 +52,8 @@
 					</a>
 				</li>
       </ul>
+      N'hésitez pas à contribuer au code (ou ... à fixer l'orthographe :) ),
+      les données qui sont utilisées pour générer des pages se trouvent dans les répertoires : <a href="https://github.com/xvw/xvw.github.io/tree/master/raw">raw</a>, <a href="https://github.com/xvw/xvw.github.io/tree/master/raw/articles">raw/articles</a> et <a href="https://github.com/xvw/xvw.github.io/tree/master/tpl">tpl</a>. (Désolé pour l'indentation, j'ai sérieusement échoué dans la customisation de mon .emacs)
 
       <h3>Typograpies</h3>
 
