--- a/tpl/apropos.html
+++ b/tpl/apropos.html
@@ -52,8 +52,9 @@
 					</a>
 				</li>
       </ul>
-      N'hésitez pas à contribuer au code (ou ... à fixer l'orthographe :) ),
-      les données qui sont utilisées pour générer des pages se trouvent dans les répertoires : <a href="https://github.com/xvw/xvw.github.io/tree/master/raw">raw</a>, <a href="https://github.com/xvw/xvw.github.io/tree/master/raw/articles">raw/articles</a> et <a href="https://github.com/xvw/xvw.github.io/tree/master/tpl">tpl</a>. (Désolé pour l'indentation, j'ai sérieusement échoué dans la customisation de mon .emacs)
+      <p>
+        N'hésitez pas à contribuer au code (ou ... à fixer l'orthographe :) ),
+        les données qui sont utilisées pour générer des pages se trouvent dans les répertoires : <a href="https://github.com/xvw/xvw.github.io/tree/master/raw">raw</a>, <a href="https://github.com/xvw/xvw.github.io/tree/master/raw/articles">raw/articles</a> et <a href="https://github.com/xvw/xvw.github.io/tree/master/tpl">tpl</a>. (Désolé pour l'indentation, j'ai sérieusement échoué dans la customisation de mon .emacs)</p>
 
       <h3>Typograpies</h3>
 
