--- a/tpl/index.html
+++ b/tpl/index.html
@@ -32,8 +32,7 @@
 
 				<li>
 					<span>Par courriel</span>
-					<a href="mailto:xaviervdw[AT]gmail[dot]com">xav<span class="obfuscator">OBFU</span>iervdw@gmail.com
-					</a>
+					<a href="mailto:xaviervdw[AT]gmail[dot]com">xav<span class="obfuscator">OBFU</span>iervdw@gmail.com</a>
 				</li>
 
 				<li>
